@@ -1,3 +1,15 @@
+2008-07-21  Matthew Grooms
+	* src/racoon/cfparse.y
+	  src/racoon/cftoken.l
+	  src/racoon/isakmp_cfg.c
+	  src/racoon/isakmp_xauth.c
+	  src/racoon/isakmp_xauth.h
+	  src/racoon/main.c
+	  src/racoon/racoon.conf.5
+	  src/racoon/session.c : add radius config options for racoon.conf
+
+src/racoon/isakmp_cfg.c : fix hybrid enabled builds
+
 2008-07-21  Timo Teras  <timo.teras@iki.fi>
 	* src/racoon/cfparse.y : do not set default gss id if xauth is used
 	* src/racoon/isakmp_agg.c
